--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -5,6 +5,7 @@
 body{
     font-family: 'SF Text', 'Noto Sans KR', sans-serif;
     font-weight: $font-weight-normal;
+    line-height: 1.5;
 }
 [lang='number']{
     font-family:  'Roboto', sans-serif;
@@ -38,11 +39,6 @@ html{
     }
 }
 
-@media screen and (min-width: 1200px) {
-    html{
-        font-size: 16px;
-    }
-}
 
 // 레이아웃
 .container {
