--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,13 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@font-face {
+  font-family: 'NHU';
+  font-display: swap;
+  src: local("Neue Haas Unica Pro"), local("NeueHaasUnicaPro-Regular"), url("./../font/NHU/NeueHaasUnica-Regular.woff2") format("woff2"), url("./../font/NHU/NeueHaasUnica-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   font-size: 10px;
   overflow-x: hidden;
@@ -7,7 +15,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: 'SF Text', 'Noto Sans KR', sans-serif !important;
+  font-family: 'NHU', 'Noto Sans KR', sans-serif !important;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: -0.1px;
@@ -22,10 +30,12 @@ body {
 #header {
   width: 100%;
   position: relative;
+  padding-top: 2.4rem;
+  padding-left: 2.4em;
+  padding-right: 2.4em;
 }
 
 #header #nav {
-  height: 4.5em;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -38,50 +48,138 @@ body {
 }
 
 #header #nav .logo {
-  font-size: 2.8rem;
-  font-weight: 500;
+  font-size: 3.6rem;
   text-decoration: none;
+  line-height: 1;
   color: #222323;
+  -webkit-transition: all 0.5s ease-in-out !important;
+  transition: all 0.5s ease-in-out !important;
 }
 
 #header #nav .menu {
-  font-size: 2.8rem;
+  font-size: 2.4rem;
   margin-left: auto;
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
 }
 
 #header #nav-web {
-  width: auto;
-  height: 12.8rem;
   position: absolute;
-  top: 0px;
-  right: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  top: 2.4rem;
+  left: 2.4em;
+  right: 2.4em;
   margin-left: auto;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
   opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #header #nav-web a {
-  font-size: 2.8rem;
+  font-size: 2rem;
   text-decoration: none;
-  margin-right: 2em;
+  margin-right: 1.6em;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 #header #nav-web a:last-child {
-  margin-right: 0;
+  margin-left: auto !important;
+  margin-right: 0 !important;
+}
+
+#footer {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
+}
+
+#footer span {
+  position: fixed;
+  bottom: 2.4rem;
+  left: 2.4em;
+}
+
+.font-88 {
+  font-size: 8.8rem;
+}
+
+.font-80 {
+  font-size: 8rem;
+}
+
+.font-72 {
+  font-size: 7.2rem;
+}
+
+.font-64 {
+  font-size: 6.4rem;
+}
+
+.font-56 {
+  font-size: 5.6rem;
+}
+
+.font-48 {
+  font-size: 4.8rem;
+}
+
+.font-40 {
+  font-size: 4rem;
+}
+
+.font-36 {
+  font-size: 3.6rem;
+}
+
+.font-32 {
+  font-size: 3.2rem !important;
+}
+
+.font-28 {
+  font-size: 2.8rem;
+}
+
+.font-24 {
+  font-size: 2.4rem;
+}
+
+.font-20 {
+  font-size: 2rem !important;
+}
+
+.font-18 {
+  font-size: 1.8rem !important;
+}
+
+.font-16 {
+  font-size: 1.6rem !important;
+}
+
+.font-15 {
+  font-size: 1.5rem !important;
+}
+
+.font-14 {
+  font-size: 1.4rem !important;
+}
+
+.font-12 {
+  font-size: 1.2rem;
+}
+
+.font-11 {
+  font-size: 1.1rem;
+}
+
+.letter-spacing--3 {
+  letter-spacing: -3px;
+}
+
+.letter-spacing--2 {
+  letter-spacing: -2px;
 }
 
 @media (max-width: 576px) {
@@ -90,41 +188,73 @@ body {
   }
 }
 
+@media (min-width: 576px) {
+  #nav {
+    -webkit-box-align: start !important;
+        -ms-flex-align: start !important;
+            align-items: flex-start !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+  #nav .menu {
+    position: absolute;
+    right: 2.4rem;
+  }
+  #nav .logo {
+    font-size: 4.8rem !important;
+  }
+}
+
 @media (min-width: 768px) {
   #nav {
     height: 12.8rem !important;
   }
   #nav .logo {
-    font-size: 4.8rem !important;
+    font-size: 5.6rem !important;
   }
-  #nav .menu {
-    font-size: 4.8rem !important;
-  }
-}
-
-@media (min-width: 992px) {
   #nav .menu {
     opacity: 0;
   }
   #nav-web {
     opacity: 1 !important;
   }
-}
-
-@media (min-width: 1400px) {
   #nav-web a {
-    margin-right: 2.4em !important;
+    font-size: 1.8rem !important;
   }
   #nav-web a:last-child {
-    margin-right: 0 !important;
+    font-size: 1rem !important;
+    font-weight: light;
   }
-  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    max-width: 1600px;
+  #footer {
+    opacity: 1 !important;
   }
 }
 
-@media (min-width: 1600px) {
+@media (min-width: 992px) {
   #nav .logo {
-    font-size: 5.6rem !important;
+    font-size: 7.2rem !important;
+  }
+  #nav-web a {
+    font-size: 2rem !important;
+    margin-right: 2em !important;
+  }
+  #nav-web a:last-child {
+    font-size: 1.4rem !important;
+    font-weight: light;
+  }
+}
+
+@media (min-width: 1480px) {
+  #nav .logo {
+    font-size: 6vw !important;
+  }
+  #nav-web a {
+    font-size: 2.6rem !important;
+    margin-right: 6rem !important;
+  }
+  #nav-web a:last-child {
+    font-size: 1.6rem !important;
+    font-weight: light;
   }
 }
