--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,13 +1,24 @@
 @import './short.scss';
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@font-face {
+    font-family: 'NHU';
+    font-display: swap;
+    src: local('Neue Haas Unica Pro'), local('NeueHaasUnicaPro-Regular'),
+        url('./../font/NHU/NeueHaasUnica-Regular.woff2') format('woff2'),
+        url('./../font/NHU/NeueHaasUnica-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+$pagePaddingSide:2.4em;
+$pagePaddingTop:2.4rem;
 html{
     font-size: 10px;
     overflow-x: hidden;
 }
 body{
     font-size: 1.6rem;
-    font-family: 'SF Text', 'Noto Sans KR', sans-serif !important;
+    font-family: 'NHU', 'Noto Sans KR', sans-serif !important;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: -0.1px;
@@ -17,52 +28,130 @@ body{
 .font-num{
     font-family: 'Roboto',sans-serif;
 }
+// 상단
 #header{
     width: 100%;
     position: relative;
+    padding-top: $pagePaddingTop;
+    padding-left: $pagePaddingSide;
+    padding-right: $pagePaddingSide;
     #nav{        
-        height: 4.5em;
         width: 100%;
         display: flex;
         align-items: center;
         transition: height 0.3s ease-in-out;
         .logo{
             // font-family: 'Xanh Mono', monospace;
-            font-size: 2.8rem;
-            font-weight: $font-weight-med;
+            font-size: 3.6rem;
             text-decoration: none;
+            line-height: 1;
             color: $ink;
+            transition: all 0.5s ease-in-out !important;
         }
         .menu{
-            font-size: 2.8rem;
+            font-size: 2.4rem;
             margin-left: auto;
             transition: opacity 0.3s ease-in-out;
         }        
     }
     #nav-web{
-        width: auto;
-        height: 12.8rem;
         position: absolute;
-        top: 0px;
-        right: 0px;
-        display: flex;
-        align-items: center;
+        top: $pagePaddingTop;
+        left: $pagePaddingSide;
+        right: $pagePaddingSide;
         margin-left: auto;
-        justify-content: end;
         opacity: 0;
         transition: opacity 0.3s ease-in-out;
+        display: flex;
         a{
             // font-weight: $font-weight-med;
-            font-size: 2.8rem;
+            font-size: 2rem;
             text-decoration: none;
-            margin-right: 2em;
+            margin-right: 1.6em;
             transition: all 0.3s ease-in-out;
         }
         //a:not(:last-child)
         a:last-child{
-            margin-right: 0;
+            margin-left: auto !important;
+            margin-right: 0 !important;
         }
     }    
+}
+// 하단
+#footer{
+    opacity: 0;
+    transition: all 0.3s ease-in-out !important;
+    span{
+        position: fixed;
+        bottom: $pagePaddingTop;
+        left: $pagePaddingSide;
+    }        
+}
+// 폰트
+@mixin fontSize() {
+    &-88{
+        font-size: 8.8rem;
+    } 
+    &-80{
+        font-size: 8rem;
+    } 
+    &-72{
+        font-size: 7.2rem;
+    } 
+    &-64{
+        font-size: 6.4rem;
+    } 
+    &-56{
+        font-size: 5.6rem;
+    } 
+    &-48{
+        font-size: 4.8rem;
+    } 
+    &-40{
+        font-size: 4rem;
+    } 
+    &-36{
+        font-size: 3.6rem;
+    } 
+    &-32{
+        font-size: 3.2rem !important;
+    } 
+    &-28{
+        font-size: 2.8rem;
+    } 
+    &-24{
+        font-size: 2.4rem;
+    } 
+    &-20{
+        font-size: 2rem !important;
+    }  
+    &-18{
+        font-size: 1.8rem !important;
+    }  
+    &-16{
+        font-size: 1.6rem !important;
+    } 
+    &-15{
+        font-size: 1.5rem !important;
+    } 
+    &-14{
+        font-size: 1.4rem !important;
+    } 
+    &-12{
+        font-size: 1.2rem;
+    } 
+    &-11{
+        font-size: 1.1rem;
+    }
+}
+.font{
+    @include fontSize() 
+}
+.letter-spacing--3{
+    letter-spacing: -3px;
+}
+.letter-spacing--2{
+    letter-spacing: -2px;
 }
 // 모바일
 @media (max-width:576px) { 
@@ -73,54 +162,86 @@ body{
         font-size: 1.4rem;
     }
 }
+
 @media (min-width:576px) {
     // .container {
     //     width: calc(100vw - 14rem);
     // }
-
-}
-// 패드
-@media (min-width: 768px) { 
     #nav{
-        height: 12.8rem !important;
+        align-items: flex-start !important;
+        justify-content: center !important;
+        .menu {
+            position: absolute;
+            right: $pagePaddingTop;
+        } 
         .logo{
             font-size: 4.8rem !important;
         }        
-        .menu {
-            font-size: 4.8rem !important;
-        } 
     }
 }
-// 웹
-@media (min-width: 992px) { 
+// 패드
+@media (min-width: 768px) {  
+    $pagePaddingSide:3.2em;
+    $pagePaddingTop:2.4rem;
     #nav{
+        height: 12.8rem !important;
+        .logo{
+            font-size: 5.6rem !important;
+        }        
         .menu {
             opacity: 0;
         } 
     }
     #nav-web{
+        a{
+            font-size: 1.8rem !important;
+        }
+        a:last-child{
+            font-size: 1rem !important;
+            font-weight: light;
+        }
         opacity: 1 !important;     
     }  
+    #footer{
+        opacity: 1 !important; 
+    }
 }
-@media (min-width: 1200px) { 
-} 
-@media (min-width: 1400px) { 
+// 웹
+@media (min-width: 992px) { 
+    #nav{ 
+        .logo{
+            font-size: 7.2rem !important;
+        }  
+
+    }
     #nav-web{
         a{
-            margin-right: 2.4em !important;
-        }  
+            font-size: 2rem !important;
+            margin-right: 2em !important;
+        } 
         a:last-child{
-            margin-right: 0 !important;
-        }
-    }  
-    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        max-width: 1600px;
-    }
-} 
-@media (min-width: 1600px) { 
+            font-size: 1.4rem !important;
+            font-weight: light;
+        } 
+
+    } 
+}
+@media (min-width: 1480px) { 
     #nav{
         .logo{
-            font-size: 5.6rem !important;
+            font-size: 6vw !important;
         }  
     }
-}             
+    #nav-web{
+        a{
+           font-size: 2.6rem !important;
+           margin-right: 6rem !important;
+        } 
+        a:last-child{
+            font-size: 1.6rem !important;
+            font-weight: light;
+        }
+    }  
+
+}  
+
