--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,9 @@
 @import './short.scss';
+@import './normalize.css';
+@import './all.css';
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 @font-face {
     font-family: 'NHU';
     font-display: swap;
@@ -10,7 +13,16 @@
     font-weight: normal;
     font-style: normal;
 }
-$pagePaddingSide:2.4em;
+@font-face {
+    font-family: 'gmarketSans';
+    font-display: swap;
+    src: local('GmarketSans'), local('GmarketSansLight'),
+        url('./../font/GmarketSans/GmarketSansLight.woff2') format('woff2'),
+        url('./../font/GmarketSans/GmarketSansLight.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+$pagePaddingSide:1.6em;
 $pagePaddingTop:2.4rem;
 html{
     font-size: 10px;
@@ -18,7 +30,7 @@ html{
 }
 body{
     font-size: 1.6rem;
-    font-family: 'NHU', 'Noto Sans KR', sans-serif !important;
+    font-family: 'NHU', 'gmarketSans', sans-serif !important;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: -0.1px;
@@ -28,13 +40,22 @@ body{
 .font-num{
     font-family: 'Roboto',sans-serif;
 }
+.line{
+    &-10{
+        line-height:1;
+    }    
+    &-12{
+        line-height:1.2;
+    }
+    &-15{
+        line-height:1.5;
+    }   
+}
 // 상단
 #header{
     width: 100%;
     position: relative;
     padding-top: $pagePaddingTop;
-    padding-left: $pagePaddingSide;
-    padding-right: $pagePaddingSide;
     #nav{        
         width: 100%;
         display: flex;
@@ -42,14 +63,13 @@ body{
         transition: height 0.3s ease-in-out;
         .logo{
             // font-family: 'Xanh Mono', monospace;
-            font-size: 3.6rem;
+            font-size: 5.2rem;
             text-decoration: none;
             line-height: 1;
-            color: $ink;
             transition: all 0.5s ease-in-out !important;
         }
         .menu{
-            font-size: 2.4rem;
+            font-size: 3.2rem;
             margin-left: auto;
             transition: opacity 0.3s ease-in-out;
         }        
@@ -64,16 +84,14 @@ body{
         transition: opacity 0.3s ease-in-out;
         display: flex;
         a{
-            // font-weight: $font-weight-med;
-            font-size: 2rem;
             text-decoration: none;
-            margin-right: 1.6em;
             transition: all 0.3s ease-in-out;
         }
         //a:not(:last-child)
-        a:last-child{
+        .text{
             margin-left: auto !important;
             margin-right: 0 !important;
+            font-weight: light;
         }
     }    
 }
@@ -86,6 +104,28 @@ body{
         bottom: $pagePaddingTop;
         left: $pagePaddingSide;
     }        
+}
+// 메인
+#main{
+    height:100vh;
+    height:calc(var(--vh, 1vh) * 100);    
+    font-size: 4rem;
+    font-weight: light;
+    text-align: center;
+    color: #fff;
+    background-image:linear-gradient(315deg,#0a14c8,#000000,#0a14c8);
+    background-size:600% 600%;
+    animation:main-bg-animation 10s ease infinite;
+    overflow-y:hidden;
+    overflow-x:hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+@keyframes main-bg-animation{
+    0%{background-position:1% 0%}
+    50%{background-position:99% 100%}
+    100%{background-position:1% 0%}
 }
 // 폰트
 @mixin fontSize() {
@@ -161,6 +201,10 @@ body{
     body{
         font-size: 1.4rem;
     }
+    #nav{
+        padding-left: $pagePaddingSide !important;
+        padding-right: $pagePaddingSide !important;            
+    }
 }
 
 @media (min-width:576px) {
@@ -175,18 +219,24 @@ body{
             right: $pagePaddingTop;
         } 
         .logo{
-            font-size: 4.8rem !important;
+            font-size:6.4rem !important;
         }        
     }
 }
 // 패드
 @media (min-width: 768px) {  
-    $pagePaddingSide:3.2em;
-    $pagePaddingTop:2.4rem;
+    $pagePaddingSide:3.2rem; 
+    #header{
+        #nav-web{
+            left: $pagePaddingSide !important;
+            right: $pagePaddingSide !important;            
+        }
+    }
+
     #nav{
         height: 12.8rem !important;
         .logo{
-            font-size: 5.6rem !important;
+            font-size: 8rem !important;
         }        
         .menu {
             opacity: 0;
@@ -194,52 +244,58 @@ body{
     }
     #nav-web{
         a{
-            font-size: 1.8rem !important;
+            font-size: 1.8rem;
+            margin-right: 3.6rem;
         }
-        a:last-child{
-            font-size: 1rem !important;
-            font-weight: light;
+        .text{
+            font-size: 1.2rem !important;
         }
         opacity: 1 !important;     
     }  
     #footer{
+        font-size: 1.1rem;
         opacity: 1 !important; 
+        span{
+            left: $pagePaddingSide !important;
+        }
     }
 }
 // 웹
 @media (min-width: 992px) { 
     #nav{ 
         .logo{
-            font-size: 7.2rem !important;
+            font-size: 8.8rem !important;
         }  
 
     }
     #nav-web{
         a{
             font-size: 2rem !important;
-            margin-right: 2em !important;
+            margin-right: 4rem !important;
         } 
-        a:last-child{
-            font-size: 1.4rem !important;
-            font-weight: light;
-        } 
-
     } 
+}
+@media (min-width: 1280px) { 
+    #nav-web{
+        a{
+            font-size: 2.2rem !important;
+            margin-right: 4.4rem !important;
+        } 
+    }    
 }
 @media (min-width: 1480px) { 
     #nav{
         .logo{
-            font-size: 6vw !important;
+            font-size: 6.8vw !important;
         }  
     }
     #nav-web{
         a{
-           font-size: 2.6rem !important;
-           margin-right: 6rem !important;
+           font-size: 2.8rem !important;
+           margin-right: 5.6rem !important;
         } 
-        a:last-child{
-            font-size: 1.6rem !important;
-            font-weight: light;
+        .text{
+            font-size: 1.2rem !important;
         }
     }  
 
